...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="100">

            <EditText
                android:id="@+id/searchData"
                android:layout_marginStart="@dimen/defaultMargin5"
                style="@style/App_EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/defaultMargin5"
                android:hint="@string/search"
...
